add data use render components and adjust styles

--- a/src/assets/translations/es/translation.json
+++ b/src/assets/translations/es/translation.json
@@ -1,3 +1,59 @@
 {
-  "hello": "hola"
+  "Hello": "¡Hola!",
+  "Am": "Soy",
+  "Full Stack Developer": "Desarrollador Full Stack",
+  "Homepage": "Inicio",
+  "Blog": "Blog",
+  "Contact": "Contacto",
+  "About": "Sobre mi",
+  "Projects": "Projectos",
+  "Profile": "Ingeniero de Sistemas, Desarrollador Full Stack 🚀👏🏼🔍. Con un año de experiencia en el área de programación, he participado activamente en la creación, implementación y mantenimiento de proyectos web. Estoy comprometido con la mejora continua, la resolución de problemas y el aprendizaje constante.",
+  "Copy email": "Copiar email",
+  "Developed Projects": "Projectos Desarrollados",
+  "Recommended Blogs": "Blogs Recomendados",
+  "Details": "Detalles",
+  "Famous Phrases": "Frases Celebres",
+  "Author": "Autor",
+  "Built in": "Construido en",
+  "Made by": "Hecho por",
+  "Personal Portfolio": "Portafolio Personal",
+  "Sample of some developed projects": "Muestra de algunos proyectos desarrollados",
+  "Download": "Descargar",
+  "Get in touch for inquiries": "Póngase en contacto para consultas",
+  "Phone": "Teléfono",
+  "Ideas, thoughts and development news": "Ideas, pensamientos y noticias sobre desarrollo",
+  "Name": "Nombre",
+  "Email": "Correo",
+  "Message": "Mensage",
+  "Description": "Descripción",
+  "Send": "Enviar",
+  "Send me a message": "Envíame un mensaje",
+  "Services": "Servicios",
+  "Web development": "Desarrollo Web",
+  "Multimedia Edition": "Edición Multimedia",
+  "User experience design": "Diseño de experiencia de usuario",
+  "Live classes": "Clases en vivo",
+  "Tools": "Herramientas",
+  "Education": "Educación",
+  "Virtual": "Virtual",
+  "In Person": "Presencial",
+  "Systems Engineer": "Ingeniería de Sistemas",
+  "Technical Bachelor": "Bachiller Técnico",
+  "Experience": "Experiencia",
+  "November": "Noviembre",
+  "April": "Abril",
+  "August": "Agosto",
+  "Actually": "Actualmente",
+  "January": "Enero",
+  "Junior Software Developer": "Desarrollador de Software Junio",
+  "FreeLancer in Computer Science": "FreeLancer en Ciencias de la Computación",
+  "Develop and maintain complete web applications, including frontend, backend and database.": "Desarrollar y mantener aplicaciones web completas, incluyendo el frontend, backend y base de datos.",
+  "Teaching live online classes to children and adolescents in technological training.": "Dictado de clases online en vivo a niños y adolescentes en formaciones tecnológicas.",
+  "Support in the operation of hardware and software assigned for the generation, processing, analysis and dissemination of statistical information.": "Apoyo en la operación del hardware y software asignado para la generación, procesamiento, análisis y difusión de información estadística.",
+  "Tasks List is an application that allows us to manage (create, delete, edit and view) day-to-day tasks": "Tasks List es una aplicación que nos permite gestionar (crear, eliminar, editar y ver) las tareas del día a día.",
+  "Web project where you can find all the information about me": "Proyecto web donde podrás encontrar toda la información sobre mí.",
+  "Countries is a web application that allows us to see the soccer teams of a country, select our favorite teams and create a player on a team": "Countries is a web application that allows us to see the soccer teams of a country, select our favorite teams and create a player on a team.",
+  "It is a web application that allows us to manage (create, delete, update, view) musical instruments. We can also register to have our own account and be able to buy completely online": "Es una aplicación web que nos permite gestionar (crear, eliminar, actualizar, visualizar) instrumentos musicales. También podemos registrarnos para tener nuestra propia cuenta y poder comprar completamente online.",
+  "It is a web application that allows us to manage (create, delete, update, view) dog breeds. It also allows us to make different search filters": "Es una aplicación web que nos permite gestionar (crear, eliminar, actualizar, visualizar) razas de perros. También nos permite realizar diferentes filtros de búsqueda.",
+  "Message sent successfully": "Mensaje enviado correctamente"
 }
