--- a/src/assets/translations/pt/translation.json
+++ b/src/assets/translations/pt/translation.json
@@ -1,3 +1,59 @@
 {
-  "hello": "holu"
+  "Hello": "Olá!",
+  "Am": "Sou",
+  "Full Stack Developer": "Desenvolvedor Full Stack",
+  "Homepage": "Inicial",
+  "Blog": "Blogue",
+  "Contact": "Contato",
+  "About": "Sobre mim",
+  "Projects": "Projetos",
+  "Profile": "Engenheiro de Sistemas, Desenvolvedor Full Stack 🚀👏🏼🔍. Com um ano de experiência na área de programação, tenho participado ativamente na criação, implementação e manutenção de projetos web. Estou comprometido com a melhoria contínua, resolução de problemas e aprendizado constante.",
+  "Copy email": "Copiar e-mail",
+  "Developed Projects": "Projetos Desenvolvidos",
+  "Recommended Blogs": "Blogs Recomendados",
+  "Details": "Detalhes",
+  "Famous Phrases": "Frases Célebres",
+  "Author": "Autor",
+  "Built in": "Construído em",
+  "Made by": "Feito por",
+  "Personal Portfolio": "Portfólio Pessoal",
+  "Sample of some developed projects": "Amostra de alguns projetos desenvolvidos",
+  "Download": "Download",
+  "Get in touch for inquiries": "Entre em contato para dúvidas",
+  "Phone": "Telefone",
+  "Ideas, thoughts and development news": "Ideias, pensamentos e notícias de desenvolvimento",
+  "Name": "Name",
+  "Email": "E-mail",
+  "Message": "Mensagem",
+  "Description": "Descrição",
+  "Send": "Enviar",
+  "Send me a message": "Me envie uma mensagem",
+  "Services": "Serviços",
+  "Web development": "Desenvolvimento web",
+  "Multimedia Edition": "Edição multimídia",
+  "User experience design": "Design de experiência do usuário",
+  "Live classes": "Aulas ao vivo",
+  "Tools": "Ferramentas",
+  "Education": "Educação",
+  "Virtual": "Virtual",
+  "In Person": "Em pessoa",
+  "Systems Engineer": "Engenharia de Sistemas",
+  "Technical Bachelor": "Bacharel Técnico",
+  "Experience": "Experiência",
+  "November": "Novembro",
+  "April": "Abril",
+  "August": "Agosto",
+  "Actually": "Na verdade",
+  "January": "Janeiro",
+  "Junior Software Developer": "Desenvolvedor de Software Júnior",
+  "FreeLancer in Computer Science": "FreeLancer em Ciência da Computação",
+  "Develop and maintain complete web applications, including frontend, backend and database.": "Desenvolva e mantenha aplicações web completas, incluindo frontend, backend e banco de dados.",
+  "Teaching live online classes to children and adolescents in technological training.": "Ministrar aulas online ao vivo para crianças e adolescentes em formação tecnológica.",
+  "Support in the operation of hardware and software assigned for the generation, processing, analysis and dissemination of statistical information.": "Apoio na operação de hardware e software atribuído à geração, processamento, análise e divulgação de informação estatística.",
+  "Tasks List is an application that allows us to manage (create, delete, edit and view) day-to-day tasks": "Lista de Tarefas é um aplicativo que nos permite gerenciar (criar, excluir, editar e visualizar) tarefas do dia a dia.",
+  "Web project where you can find all the information about me": "Projeto web onde você pode encontrar todas as informações sobre mim.",
+  "Countries is a web application that allows us to see the soccer teams of a country, select our favorite teams and create a player on a team": "Países é uma aplicação web que nos permite ver os times de futebol de um país, selecionar nossos times favoritos e criar um jogador em um time.",
+  "It is a web application that allows us to manage (create, delete, update, view) musical instruments. We can also register to have our own account and be able to buy completely online": "É uma aplicação web que nos permite gerenciar (criar, excluir, atualizar, visualizar) instrumentos musicais. Também podemos nos registrar para ter nossa própria conta e poder comprar totalmente online.",
+  "It is a web application that allows us to manage (create, delete, update, view) dog breeds. It also allows us to make different search filters": "É uma aplicação web que nos permite gerir (criar, eliminar, atualizar, visualizar) raças de cães. Também nos permite fazer diferentes filtros de pesquisa.",
+  "Message sent successfully": "Mensagem enviada corretamente"
 }
